fixed overflow issue with long text in email list item

--- a/src/styles/components/_emaillistitem.scss
+++ b/src/styles/components/_emaillistitem.scss
@@ -1,12 +1,14 @@
 .EmailListItem {
+    align-items: center;
     display: flex;
     flex-direction: row;
-    max-width: 100%;
+    padding: .25rem .5rem .25rem 0;
 
     & .EmailListItem__email-info-container {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
+        overflow: hidden;
         width: 100%;
         
         @include style-for($var-screen-size-small) {
